update TestGC - Garbage Collector stress test